<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:weightSum="8">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/userIconHint"
        android:id="@+id/textView"
        android:textSize="25sp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/imageButton"
        android:src="@mipmap/ic_prism"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/userIconHint"
        android:layout_weight="1" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtName"
        android:layout_marginTop="0dp"
        android:hint="@string/setupName"
        android:layout_weight="1" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:id="@+id/txtUsername"
        android:inputType="text"
        android:hint="@string/userNameHint"
        android:layout_marginTop="0dp"
        android:layout_weight="1" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:id="@+id/txtSchool"
        android:inputType="text"
        android:hint="@string/schoolHint"
        android:layout_weight="1" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/spinStanding"
        android:layout_weight="1" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/chkHS"
        android:id="@+id/chkHS"
        android:enabled="false"
        android:layout_weight="1"
        android:layout_marginBottom="35dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/btContinue"
        android:id="@+id/setupDone"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:layout_weight="1" />

</LinearLayout>