<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1"
        android:orientation="horizontal"
        android:layout_gravity="top"
        android:layout_weight="4"
        android:weightSum="4">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="left"
                android:weightSum="4"
                android:layout_weight="3">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/tileOne"
                    android:src="@drawable/tile"
                    android:layout_gravity="left"
                    android:layout_marginLeft="15sp"
                    android:layout_marginTop="15sp"
                    android:layout_weight="1"
                    android:contentDescription="@string/materialOne" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/tileTwo"
                    android:src="@drawable/tile"
                    android:layout_gravity="left"
                    android:layout_marginLeft="15sp"
                    android:layout_weight="1"
                    android:contentDescription="@string/materialTwo" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/tileThree"
                    android:layout_gravity="left"
                    android:layout_marginLeft="15sp"
                    android:src="@drawable/tile"
                    android:layout_weight="1"
                    android:contentDescription="@string/materialThree" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/tileFour"
                    android:layout_gravity="left"
                    android:layout_marginLeft="15sp"
                    android:src="@drawable/tile"
                    android:layout_weight="1"
                    android:layout_marginBottom="15sp"
                    android:contentDescription="@string/materialFour" />
            </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgDirection"
            android:src="@drawable/material_guide"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/directions" />
    </LinearLayout>

    <Button
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/btnCheck"
        android:id="@+id/btnCheck"
        android:enabled="true"
        android:textSize="20sp"
        android:layout_marginBottom="10sp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>