<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <opticallearning.learnoptics.DrawingView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgLaser"
        android:src="@drawable/laser_front"
        android:scaleType="fitXY"
        android:contentDescription="@string/laser"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:id="@+id/dDect1"
        android:src="@drawable/detector"
        android:contentDescription="@string/detector"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:id="@+id/dDect2"
        android:src="@drawable/detector"
        android:contentDescription="@string/detector"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/dDect1"
        android:layout_alignStart="@+id/dDect1" />

    <ImageView
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:id="@+id/dDect3"
        android:src="@drawable/detector"
        android:contentDescription="@string/detector"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <opticallearning.learnoptics.DrawingView
        android:layout_width="30sp"
        android:layout_height="100sp"
        android:id="@+id/dLen"
        android:background="@drawable/lens_edging"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/lens" />

    <View
        android:layout_width="1dp"
        android:layout_height="15dp"
        android:background="@android:color/transparent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/divider" />

    <ImageView
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:id="@+id/dDect4"
        android:src="@drawable/detector"
        android:contentDescription="@string/detector"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/indShape"
        android:background="@drawable/border"
        android:padding="5sp"
        android:text="@string/indPreShape"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/indNindex"
        android:layout_toStartOf="@+id/indNindex"
        android:layout_marginRight="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/indNindex"
        android:background="@drawable/border"
        android:padding="5sp"
        android:text="@string/indPreIndex"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/divider"
        android:layout_toStartOf="@+id/divider"
        android:layout_marginRight="2dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/indRadius"
        android:background="@drawable/border"
        android:padding="5sp"
        android:text="@string/indPreRadius"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/divider"
        android:layout_marginLeft="2dp"
        android:layout_toEndOf="@+id/divider" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/indFocalLength"
        android:background="@drawable/border"
        android:padding="5sp"
        android:text="@string/indPreFocal"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/indRadius"
        android:layout_toEndOf="@+id/indRadius"
        android:layout_marginLeft="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activate"
        android:id="@+id/btnActivate"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekDistance"
        android:layout_below="@+id/dLen"
        android:layout_alignLeft="@+id/indNindex"
        android:layout_alignStart="@+id/indNindex"
        android:layout_alignRight="@+id/indRadius"
        android:layout_alignEnd="@+id/indRadius"
        android:max="4"
        android:progress="2" />

</RelativeLayout>