<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ruler"
        android:src="@drawable/ruler"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:contentDescription="@string/ruler" />

    <opticallearning.learnoptics.DrawingView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgLaser"
        android:src="@drawable/laser_front"
        android:scaleType="fitXY"
        android:contentDescription="@string/laser"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="30sp"
        android:layout_height="125sp"
        android:id="@+id/ccLen"
        android:background="@drawable/border"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/lens"
        android:scaleType="fitCenter" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinCC"
        android:background="@drawable/border"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="5sp" />

</RelativeLayout>