<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="opticallearning.learnoptics.MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false"
        android:layout_centerInParent="true">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="3"
            android:columnCount="2"
            android:columnOrderPreserved="true">

            <ImageButton
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_row="0"
                android:layout_column="0"
                android:src="@drawable/lightbulb"
                android:id="@+id/btnBrightSource"
                android:contentDescription="@string/btnBrightSource"
                android:layout_margin="15sp"
                android:clickable="true"
                android:scaleType="fitCenter" />

            <ImageButton
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:id="@+id/btnLensCraft"
                android:layout_row="0"
                android:layout_column="1"
                android:src="@drawable/lens_icon"
                android:contentDescription="@string/btnLens"
                android:layout_margin="15sp"
                android:clickable="true"
                android:scaleType="fitCenter" />

            <ImageButton
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:id="@+id/btnMedium"
                android:layout_row="1"
                android:layout_column="1"
                android:src="@drawable/diamond"
                android:contentDescription="@string/btnMedium"
                android:layout_margin="15sp"
                android:clickable="true"
                android:scaleType="fitCenter" />

            <ImageButton
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:id="@+id/btnSpectrum"
                android:layout_row="1"
                android:layout_column="0"
                android:contentDescription="@string/btnSpec"
                android:layout_margin="15sp"
                android:clickable="true"
                android:scaleType="fitCenter"
                android:src="@drawable/spiral" />

            <ImageButton
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:id="@+id/btnCredits"
                android:layout_row="2"
                android:layout_column="0"
                android:src="@drawable/credits"
                android:clickable="true"
                android:contentDescription="@string/btnCredits"
                android:layout_margin="15sp"
                android:scaleType="fitCenter" />

            <ImageButton
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:id="@+id/btnPortal"
                android:layout_row="2"
                android:layout_column="1"
                android:src="@drawable/portal"
                android:contentDescription="@string/btnExtend"
                android:layout_margin="15sp"
                android:clickable="true"
                android:scaleType="fitCenter" />
        </GridLayout>
    </ScrollView>

</RelativeLayout>
