<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/lens">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ruler"
        android:src="@drawable/ruler"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:contentDescription="@string/ruler" />

    <opticallearning.learnoptics.DrawingView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/view"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgLaser"
        android:src="@drawable/laser_front"
        android:scaleType="fitXY"
        android:contentDescription="@string/laser"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:id="@+id/wDect1"
        android:src="@drawable/detector"
        android:contentDescription="@string/detector"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:id="@+id/skDect2"
        android:src="@drawable/detector"
        android:contentDescription="@string/detector"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/wDect1"
        android:layout_alignStart="@+id/wDect1" />

    <ImageView
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:id="@+id/skDect3"
        android:src="@drawable/detector"
        android:contentDescription="@string/detector"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <opticallearning.learnoptics.DrawingView
        android:layout_width="30sp"
        android:layout_height="100sp"
        android:id="@+id/skewLen"
        android:background="@drawable/lens_edging"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/lens" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinSkew"
        android:background="@drawable/border"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="5sp" />

    <ImageView
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:id="@+id/skDect4"
        android:src="@drawable/detector"
        android:contentDescription="@string/detector"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>